log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:14:17 PM UTC: 
 tests:  0|6
total_score: 0/70
d9794c3
Thu 30 Mar 2023 11:17:49 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:16: error: expected expression before ‘ArrayList’
   19 |         return ArrayList;
      |                ^~~~~~~~~
arraylist.c:20:1: error: control reaches end of non-void function [-Werror=return-type]
   20 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f36e39
Thu 30 Mar 2023 11:18:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:18: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   15 |         new->data=NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
92a3b4d
Thu 30 Mar 2023 11:18:43 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:22: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   15 |         new->capacity=0;
      |         ~~~~~~~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
e56dbb8
Thu 30 Mar 2023 11:19:21 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
58a873f
Thu 30 Mar 2023 11:24:42 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
4d9233f
Thu 30 Mar 2023 11:25:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2b37da3
Thu 30 Mar 2023 11:25:47 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ff2e372
Thu 30 Mar 2023 11:29:07 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3a15a04
Thu 30 Mar 2023 11:30:29 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
65f8db9
Fri 31 Mar 2023 01:58:05 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e8038c3
Fri 31 Mar 2023 02:03:32 PM UTC: 
 arraylist.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|5
total_score: 15/70
df81c80
Fri 31 Mar 2023 02:04:28 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
2cf173d
Fri 31 Mar 2023 02:08:18 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8339dff
Fri 31 Mar 2023 02:13:18 PM UTC: 
 arraylist.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 20/70
e04e1d7
Fri 31 Mar 2023 02:15:17 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4f24f09
Fri 31 Mar 2023 02:15:48 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4fe66ce
Fri 31 Mar 2023 02:16:23 PM UTC: 
 arraylist.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘expandList’:
arraylist.c:16:1: error: unknown type name ‘n’
   16 | n
      | ^
arraylist.c:17:10: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   17 |         l->data=realloc(l->data,l->capacity*2);
      |          ^~
Compilation failed
ef7fbcf
Fri 31 Mar 2023 02:16:35 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
5fd4cf3
Fri 31 Mar 2023 02:26:19 PM UTC: 
 arraylist.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  3|4
total_score: 20/70
4a56e4b
Fri 31 Mar 2023 02:26:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:54:9: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   54 |         size++;
      |         ^~~~
      |         dysize
arraylist.c:54:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ea82d53
Fri 31 Mar 2023 02:26:48 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a962998
Fri 31 Mar 2023 02:29:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fadc5f7
Fri 31 Mar 2023 02:47:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
415ed17
Fri 31 Mar 2023 02:54:26 PM UTC: 
 arraylist.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
d9fb797
Fri 31 Mar 2023 02:55:30 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
e00c56f
Fri 31 Mar 2023 02:58:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
4c9a251
Fri 31 Mar 2023 03:04:25 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
e1f9fbe
